Show error if edition note was not found

--- a/UJCSystem/ITJakub.Web.Hub/Localization/EditionNote/EditionNote.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/EditionNote/EditionNote.cs-CZ.json
@@ -1,8 +1,8 @@
 {
-	"culture":"cs-CZ",
-	"scope":"EditionNote",
-	"dictionary": {
-		"EditionNote": "Ediční poznámka"
-
-		}
+  "culture": "cs-CZ",
+  "scope": "EditionNote",
+  "dictionary": {
+    "EditionNote": "Ediční poznámka",
+    "NotFound": "Ediční poznámka k tomuto dílu nebyla nalezena"
+  }
 }
