Reformat localization JSON files

--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
@@ -5,7 +5,8 @@
     "SearchCombined": "Korpusy - Vyhledávání kombinované",
     "SearchSingleLazyload": "Korpusy - Vyhledávání podle díla na jedné stránce",
     "SearchSinglePaged": "Korpusy - Vyhledávání podle díla strankované",
-    "SearchDefaultError": "Vyhledávání se nezdařilo. Ujistěte se, zda máte zadáno alespoň jedno kritérium na vyhledávání v textu.",
+    "SearchDefaultError":
+      "Vyhledávání se nezdařilo. Ujistěte se, zda máte zadáno alespoň jedno kritérium na vyhledávání v textu.",
     "BohemianTextBankFeedback": "Korpusy - Připomínky",
     "BohemianTextBankHelp": "Korpusy - Nápověda",
     "BohemianTextBankInformation": "Korpusy - Informace",
