--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.en.json
@@ -1,11 +1,12 @@
 {
-	"culture":"en",
-	"scope":"BohemianTextBank",
+  "culture": "en",
+  "scope": "BohemianTextBank",
   "dictionary": {
     "SearchCombined": "Corpora - Combined search",
     "SearchSingleLazyload": "Corpora - Search by work on one page",
     "SearchSinglePaged": "Corpora - Search by work (paged)",
-    "SearchDefaultError": "Searching was unsuccessful. Make sure that you fill at least one criteria for searching in text.",
+    "SearchDefaultError":
+      "Searching was unsuccessful. Make sure that you fill at least one criteria for searching in text.",
     "BohemianTextBankFeedback": "Corpora - Feedback",
     "BohemianTextBankHelp": "Corpora - Help",
     "BohemianTextBankInformation": "Corpora - Information",
