--- a/UJCSystem/ITJakub.Web.Hub/Localization/RepositoryImport/RepositoryImport.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RepositoryImport/RepositoryImport.cs-CZ.json
@@ -1,6 +1,6 @@
 {
-	"culture":"cs-CZ",
-	"scope":"RepositoryImport",
+  "culture": "cs-CZ",
+  "scope": "RepositoryImport",
   "dictionary": {
     "ExternalRepositoriesTitle": "Externí databáze bibliografických údajů",
     "FilteringSetsTitle": "Filtrační sety",
@@ -44,10 +44,12 @@
     "ImportStatusLoading": "Načítání informací o průběhu importu",
     "CancelImportTask": "Zrušit import",
     "Import": "Importovat",
-    "EmptyExternalRepositoryList": "Zatím nebyla přidáná žádná externí databáze bibliografických údajů. Klikněte {0} pro přidání.",
+    "EmptyExternalRepositoryList":
+      "Zatím nebyla přidáná žádná externí databáze bibliografických údajů. Klikněte {0} pro přidání.",
     "Here": "zde",
     "EmptyFilteringExpressionList": "Zatím nebyl vytvořen žádný filtrační set.",
-    "UrlTemplateHelp": "Doplňte adresu ve tvaru např. \"www.example.com/path/{0}\", kde se za \"{0}\" automaticky doplní ID importovaného záznamu.",
+    "UrlTemplateHelp":
+      "Doplňte adresu ve tvaru např. \"www.example.com/path/{0}\", kde se za \"{0}\" automaticky doplní ID importovaného záznamu.",
     "NoImport": "Zatím nebyl proveden žádný import",
     "ImportStatus": "Zpracováno {0} z {1} záznamů."
   }
