--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
@@ -41,9 +41,12 @@
     "DeleteRoleConfirm": "Opravdu chcete smazat skupinu {0}?",
     "AssignPermission": "Přiřadit právo",
     "UnassignPermission": "Odebrat právo",
-    "RegisteredRoleModifyWarning": "Skupina {0} se přiřadí automaticky každému registrovanému uživateli. Jste si jisti, že ji chcete upravit?",
-    "UnregisteredRoleModifyWarning": "Skupinu {0} má každý nepřihlášený uživatel. Jste si jisti, že ji chcete upravit?",
-    "RemoveUserFromRegisteredRole": "Skupina {0} je základní skupina pro všechny registrované uživatele. Opravdu chcete odstranit uživatele z této skupiny?",
+    "RegisteredRoleModifyWarning":
+      "Skupina {0} se přiřadí automaticky každému registrovanému uživateli. Jste si jisti, že ji chcete upravit?",
+    "UnregisteredRoleModifyWarning":
+      "Skupinu {0} má každý nepřihlášený uživatel. Jste si jisti, že ji chcete upravit?",
+    "RemoveUserFromRegisteredRole":
+      "Skupina {0} je základní skupina pro všechny registrované uživatele. Opravdu chcete odstranit uživatele z této skupiny?",
     "Remove": "Odstranit"
   }
 }
