--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.en.json
@@ -1,6 +1,6 @@
 {
-	"culture":"en",
-	"scope":"PermissionJs",
+  "culture": "en",
+  "scope": "PermissionJs",
   "dictionary": {
     "News": "News",
     "BookUploading": "Book uploading",
@@ -32,7 +32,7 @@
     "ProjectIsNotSelected": "The project is not selected.",
     "RemoveProjectFromRoleError": "An unexpected error occurred when removing the project's permission from the group.",
     "AddProjectToRoleError": "An unexpected error occurred when adding the project's permission to the group.",
-    
+
     "PasswordResetSuccess": "Link for resetting password was sent to the user's email.",
 
     "Cancel": "Cancel",
@@ -41,9 +41,12 @@
     "DeleteRoleConfirm": "Are you sure you want to delete group {0}?",
     "AssignPermission": "Assign permission",
     "UnassignPermission": "Unassign permission",
-    "RegisteredRoleModifyWarning": "The group {0} is automatically assigned to every registered user. Are you sure that you wanted to modify it?",
-    "UnregisteredRoleModifyWarning": "The group {0} has every user who is not signed in. Are you sure that you wanted to modify it?",
-    "RemoveUserFromRegisteredRole": "The {0} is a base group for every registered user. Are you sure that you wanted to remove the user from this group?",
+    "RegisteredRoleModifyWarning":
+      "The group {0} is automatically assigned to every registered user. Are you sure that you wanted to modify it?",
+    "UnregisteredRoleModifyWarning":
+      "The group {0} has every user who is not signed in. Are you sure that you wanted to modify it?",
+    "RemoveUserFromRegisteredRole":
+      "The {0} is a base group for every registered user. Are you sure that you wanted to remove the user from this group?",
     "Remove": "Remove"
   }
 }
