--- a/UJCSystem/ITJakub.Web.Hub/Localization/RepositoryImport/RepositoryImport.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RepositoryImport/RepositoryImport.en.json
@@ -44,10 +44,12 @@
     "ImportStatusLoading": "translate[Načítání informací o průběhu importu]",
     "CancelImportTask": "translate[Zrušit import]",
     "Import": "translate[Importovat]",
-    "EmptyExternalRepositoryList": "translate[Zatím nebyla přidáná žádná externí databáze bibliografických údajů. Klikněte {0} pro přidání.]",
+    "EmptyExternalRepositoryList":
+      "translate[Zatím nebyla přidáná žádná externí databáze bibliografických údajů. Klikněte {0} pro přidání.]",
     "Here": "here",
     "EmptyFilteringExpressionList": "translate[Zatím nebyl vytvořen žádný filtrační set.]",
-    "UrlTemplateHelp": "translate[Doplňte adresu ve tvaru např. \"www.example.com/path/{0}\", kde se za \"{0}\" automaticky doplní ID importovaného záznamu.]",
+    "UrlTemplateHelp":
+      "translate[Doplňte adresu ve tvaru např. \"www.example.com/path/{0}\", kde se za \"{0}\" automaticky doplní ID importovaného záznamu.]",
     "NoImport": "No import has been performed yet",
     "ImportStatus": "It is processed {0} of {1} records."
   }
