--- a/UJCSystem/ITJakub.Web.Hub/Localization/cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/cs-CZ.json
@@ -41,45 +41,46 @@
     "SignUp": "Registace",
     "EditText": "Upravit text",
     "CreateText": "Vytvořit text",
-    "EmailIsNotConfirmedAlertDescription": "Pokud není e-mail ověřen, není možné obnovit heslo ani zabezpečit účet pomocí druhého faktoru."
+    "EmailIsNotConfirmedAlertDescription":
+      "Pokud není e-mail ověřen, není možné obnovit heslo ani zabezpečit účet pomocí druhého faktoru."
   },
   "plural": {
     "Characters": {
       "znaků": [
-        [ null, -5, "znaků" ],
-        [ -4, -2, "znaky" ],
-        [ -1, -1, "znak" ],
-        [ 0, 0, "znaků" ],
-        [ 1, 1, "znak" ],
-        [ 2, 4, "znaky" ],
-        [ 5, null, "znaků" ]
+        [null, -5, "znaků"],
+        [-4, -2, "znaky"],
+        [-1, -1, "znak"],
+        [0, 0, "znaků"],
+        [1, 1, "znak"],
+        [2, 4, "znaky"],
+        [5, null, "znaků"]
       ]
     },
     "Years": {
       "lety": [
-        [ null, -2, "lety" ],
-        [ -1, -1, "rokem" ],
-        [ 0, 0, "lety" ],
-        [ 1, 1, "rokem" ],
-        [ 2, null, "lety" ]
+        [null, -2, "lety"],
+        [-1, -1, "rokem"],
+        [0, 0, "lety"],
+        [1, 1, "rokem"],
+        [2, null, "lety"]
       ]
     },
     "Months": {
       "měsíci": [
-        [ null, -2, "měsíci" ],
-        [ -1, -1, "měsícem" ],
-        [ 0, 0, "měsíci" ],
-        [ 1, 1, "měsícem" ],
-        [ 2, null, "měsíci" ]
+        [null, -2, "měsíci"],
+        [-1, -1, "měsícem"],
+        [0, 0, "měsíci"],
+        [1, 1, "měsícem"],
+        [2, null, "měsíci"]
       ]
     },
     "Days": {
       "dny": [
-        [ null, -2, "dny" ],
-        [ -1, -1, "dnem" ],
-        [ 0, 0, "dny" ],
-        [ 1, 1, "dnem" ],
-        [ 2, null, "dny" ]
+        [null, -2, "dny"],
+        [-1, -1, "dnem"],
+        [0, 0, "dny"],
+        [1, 1, "dnem"],
+        [2, null, "dny"]
       ]
     }
   }
