Metadata editor - improve view

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -7,7 +7,7 @@
     "BookmarkError": "Chyba při načítání záložky.",
     "ResourceError": "Chyba při načítání zdrojů",
     "VersionListError": "Chyba při načítání seznamu verzí",
-    
+
     "MissingPublisherNameError": "Nebyl vyplněn název nakladatele",
     "CreatePublisherError": "Chyba při vytváření nového nakladatele",
     "MissingName": "Nebyl vyplněn název",
@@ -51,6 +51,7 @@
     "Editor": "Editor",
     "Editor2": "Editor 2",
     "LastModification": "Poslední úprava",
+    "MetadataWasNotEdited": "Metadata zatím nebyla upravena",
     "RelicAbbr": "Zkratka památky",
     "Preview": "Náhled",
 
@@ -60,8 +61,8 @@
     "ResourcesHistory": "Změny zdrojů",
 
     "CommonInformation": "Obecné informace",
-    "ProjectName": "Název projektu",
-    "ProjectSubName": "Podnázev projektu",
+    "ProjectName": "Název díla",
+    "ProjectSubName": "Podnázev díla",
     "Title": "Titul",
     "Subtitle": "Podtitul",
     "SourceAbbr": "Zkratka pramene",
@@ -70,6 +71,7 @@
     "PublishPlace": "Místo publikace",
     "PublishDate": "Rok/roky publikace",
     "ResponsiblePeople": "Odpovědné osoby",
+    "NoResponsiblePeople": "Nebyly přidány žádné odpovědné osoby",
     "AddNewResponsiblePerson": "Přidat novou odpovědnou osbou",
     "FindResponsiblePerson": "Vyhledat odpovědnou osobu",
     "Bibliography": "Bibliografie",
@@ -78,12 +80,14 @@
     "Add": "Přidat",
     "Original/Handwriting": "Předloha/rukopis",
     "LiteraryOriginal": "Předloha",
+    "NoLiteraryOriginal": "Předloha nebyla zadána",
     "Country": "Země",
     "City": "Město",
     "Institution": "Instituce",
     "Signature": "Signatura",
     "Extent": "Rozsah",
     "Authors": "Autoři",
+    "NoAuthors": "Nebyli přidání žádní autoři",
     "AuthorsFromBook": "Autoři (z knihy)",
     "OriginDate": "Vydáno (slovní popis)",
     "NotBefore": "Nevydáno před rokem",
