--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -51,6 +51,7 @@
     "Editor": "Editor",
     "Editor2": "Editor 2",
     "LastModification": "translate[Poslední úprava]",
+    "MetadataWasNotEdited": "The metadata was not edited yet.",
     "EditionAbbr": "translate[Zkratka památky]",
     "Preview": "Preview",
 
@@ -60,8 +61,8 @@
     "ResourcesHistory": "translate[Změny zdrojů]",
 
     "CommonInformation": "translate[Obecné informace]",
-    "ProjectName": "translate[Název projektu]",
-    "ProjectSubName": "translate[Podnázev projektu]",
+    "ProjectName": "translate[Název díla]",
+    "ProjectSubName": "translate[Podnázev díla]",
     "Title": "translate[Titul]",
     "Subtitle": "translate[Podtitul]",
     "SourceAbbr": "translate[Zkratka pramene]",
@@ -70,6 +71,7 @@
     "PublishPlace": "translate[Místo publikace]",
     "PublishDate": "translate[Rok/roky publikace]",
     "ResponsiblePeople": "Responsible people",
+    "NoResponsiblePeople": "No responsible people were added",
     "AddNewResponsiblePerson": "Add new responsible person",
     "FindResponsiblePerson": "Find responsible person",
     "Bibliography": "translate[Bibliografie]",
@@ -78,12 +80,14 @@
     "Add": "translate[Přidat]",
     "Original/Handwriting": "translate[Předloha/rukopis]",
     "LiteraryOriginal": "translate[Předloha]",
+    "NoLiteraryOriginal": "The literary original was not entered.",
     "Country": "translate[Země]",
     "City": "translate[Město]",
     "Institution": "translate[Instituce]",
     "Signature": "translate[Signatura]",
     "Extent": "translate[Rozsah]",
     "Authors": "translate[Autoři]",
+    "NoAuthors": "No authors were added",
     "AuthorsFromBook": "Authors (from book)",
     "OriginDate": "translate[Vydáno (slovní popis)]",
     "NotBefore": "translate[Nevydáno před rokem]",
