--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -100,6 +100,7 @@
     "MetadataSaveError": "Některá metadata se nepodařilo uložit",
     "DataSaveSuccess": "Data uložena",
     "DataSaveError": "Některá data se nepodařilo uložit",
+    "SpecifiedDataSaveError": "Nepodařilo se uložit následující data: {0}.",
     "KeywordsSaveError": "Nepodařilo se uložit klíčová slova. Prosím zkontrolujte, zda neexistují duplicitní klíčová slova.",
     "OldBohemian": "Staročeský",
     "MiddleBohemian": "Středněčeský",
