Create snapshot - confirm dialog if no resource is selected

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -31,6 +31,7 @@
     "FirstVersionComment": "Komentář k první verzi",
     "ErrorDuringSave": "Chyba při ukládání",
     "Cancel": "Zrušit",
+    "Confirm": "Potvrdit",
     "Done": "Hotovo",
     "OriginalTitle": "Původní název",
     "NewTitle": "Nový název",
