--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -31,6 +31,7 @@
     "FirstVersionComment": "translate[Komentář k první verzi]",
     "ErrorDuringSave": "translate[Chyba při ukládání]",
     "Cancel": "translate[Zrušit]",
+    "Confirm": "Confirm",
     "Done": "translate[Hotovo]",
     "OriginalTitle": "translate[Původní název]",
     "NewTitle": "translate[Nový název]",
