--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -15,6 +15,7 @@
     "CreateLiteraryGenre": "Chyba při vytváření nového literárního žánru",
     "CreateResourcesError": "Chyba při načítání zdrojů k publikaci",
     "SelectedResources": "Vybráno {0}/{1} textů, {2}/{3} obrázků, {4}/{5} audio zdrojů.",
+    "CreateSnapshotWithoutResources": "Jste si jisti, že chcete vytvořit publikaci bez zdrojů?",
 
     "Pages": "Stránky",
     "PageContent": "Obsah stránky",
