--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -15,7 +15,7 @@
     "CreateLiteraryGenre": "Chyba při vytváření nového literárního žánru",
     "CreateResourcesError": "Chyba při načítání zdrojů k publikaci",
     "SelectedResources": "Selected {0}/{1} texts, {2}/{3} images, {4}/{5} audio resources.",
-    "CreateSnapshotWithoutResources": "Are you sure that you want to create a publication without resources?",
+    "CreateSnapshotWithoutResources": "No resource was selected for publication. Are you sure that you want to publish the work?",
 
     "Pages": "Pages",
     "PageContent": "Page content",
