--- a/UJCSystem/ITJakub.Web.Hub/Localization/cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/cs-CZ.json
@@ -29,6 +29,8 @@
     "Error": "Chyba",
     "Warning": "Upozornění",
     "Info": "Info",
+    "Yes": "Ano",
+    "No": "Ne",
     "Back": "Zpět",
     "DefaultTitle": "Default title",
 
