--- a/UJCSystem/ITJakub.Web.Hub/Localization/en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/en.json
@@ -30,6 +30,8 @@
     "Warning": "Warning",
     "Info": "Info",
     "Back": "Back",
+    "Yes": "Yes",
+    "No": "No",
     "DefaultTitle": "Default title",
 
     "SortBy": "Sort by",
