Page list editor - improve page generator

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -26,6 +26,7 @@
     "EmptyPage": "Stránka neobsahuje text ani obrázek.",
     "SwapNumbers": "Prosím prohoďte čísla od a do.",
     "EnterValidNumbers": "Prosím vložte validní čísla",
+    "DoubleGenerationWarning": "Upozornění, poslední stránka nebude dvojstránka.",
     "AddingGeneratedNames": "Projekt již obshauje stránky. Vygenerované stránky byly přidány na konec seznamu.",
     "Shift": "Posun",
     "ShiftPageUp": "Posunout vybrané stránky nahoru",
