--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -26,6 +26,7 @@
     "EmptyPage": "Page does not contain text nor image.",
     "SwapNumbers": "Please swap to and from numbers.",
     "EnterValidNumbers": "Please enter a number.",
+    "DoubleGenerationWarning": "Warning, the last page will not be a double-page.",
     "AddingGeneratedNames": "Page names already exist for this project. Appending generated names to the end of the list.",
     "Shift": "Shift",
     "ShiftPageUp": "Shift selected pages up",
