--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -27,7 +27,7 @@
     "SwapNumbers": "Prosím prohoďte čísla od a do.",
     "EnterValidNumbers": "Prosím vložte validní čísla",
     "DoubleGenerationWarning": "Upozornění, poslední stránka nebude dvojstránka.",
-    "AddingGeneratedNames": "Projekt již obshauje stránky. Vygenerované stránky byly přidány na konec seznamu.",
+    "AddingGeneratedNames": "Projekt již obsahuje stránky. Vygenerované stránky byly přidány na konec seznamu.",
     "Shift": "Posun",
     "ShiftPageUp": "Posunout vybrané stránky nahoru",
     "ShiftPageDown": "Posunout vybrané stránky dolů",
