Propagate comment in the text validation to the editor

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -61,6 +61,7 @@
     "Cancel": "Zrušit",
     "SaveAndClose": "Uložit a zavřít",
     "Save": "Uložit",
+    "SaveWithErrors": "Uložit s chybami",
     "AddComment": "Přidat komentář",
     "CreateCommentWarning": "Upozornění, přidání nového komentáře provede uložení stránky.",
     "ExpandCommentArea": "Zvětšit sekci komentářů",
@@ -76,6 +77,9 @@
     "CommentDeleteFail": "Komentář se nepodařilo smazat.",
     "OverlappingComment": "Váš komentář se překrývá s jiným komentářem. Prosím, vyberte jinou část textu.",
     "EnterComment": "Vložte svůj komentář sem:",
+    "CommentSyntaxError": "Text obsahuje značky pro komentáře se špatnou syntaxí. Správná syntaxe je $komentar-5% pro začátek a %komentar-5$ pro konec komentované oblasti.",
+    "CommentValidationError": "Text obsahuje jeden z následujících problémů ohledně komentářů: značky pro oblast komentované oblasti mají špatnou syntaxi (správně: $komentar-5% a %komentar-5$), nebo text obsahuje referenci na neexistující komentář, nebo naopak v textu chybí reference na existující komentář.",
+    "AutomaticallyFixProblems": "Automaticky opravit problémy",
     "CloseEditedPage": "Je otevřen editor pro stránku {0}. Opravdu chtete editor zavřít bez uložení?",
     "ChangesSaveSuccess": "Vaše změny byly úspěšně uloženy.",
     "ChangesSaveFail": "Při ukládání změn došlo k neočekávané chybě.",
