--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -61,6 +61,7 @@
     "Cancel": "Cancel",
     "SaveAndClose": "Save and close",
     "Save": "Save",
+    "SaveWithErrors": "Save with errors",
     "AddComment": "Add comment",
     "CreateCommentWarning": "Warning, adding new comment will save the page.",
     "ExpandCommentArea": "Expand comment area",
@@ -76,6 +77,9 @@
     "CommentDeleteFail": "Failed to delete this comment.",
     "OverlappingComment": "Your comment overlaps with another comment. Please select other part of text.",
     "EnterComment": "Please enter your comment here:",
+    "CommentSyntaxError": "The text contains a comment tags with incorrect syntax. The correct syntax is $komentar-5% for an opening tag and %komentar-5$ for a closing tag.",
+    "CommentValidationError": "The text contains one of the following problems with comments: the tags for commented area have incorrect syntax (correctly: $komentar-5% and %komentar-5$), or the text contains reference to a removed comment, or the text doesn't have reference to the existing comment.",
+    "AutomaticallyFixProblems": "Automatically fix the problems",
     "CloseEditedPage": "There's an open editor in page {0}. Are you sure you want to close it without saving?",
     "ChangesSaveSuccess": "Your changes have been successfully saved.",
     "ChangesSaveFail": "There was an error while saving your changes.",
