Comments - edit root comment

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -72,7 +72,9 @@
     "DeleteCommentConfirm": "Opravdu chcete smazat tento komentář?",
     "ConfirmTitle": "Potvrzení",
     "CommentCreateSuccess": "Komentář úspěšně vytvořen.",
+    "CommentUpdateSuccess": "Komentář úspěšně upravit.",
     "CommentCreateFail": "Komentář se nepodařilo vytvořit.",
+    "CommentUpdateFail": "Komentář se nepodařilo upravit.",
     "CommentDeleteSuccess": "Komentář úspěšně smazán.",
     "CommentDeleteFail": "Komentář se nepodařilo smazat.",
     "OverlappingComment": "Váš komentář se překrývá s jiným komentářem. Prosím, vyberte jinou část textu.",
