--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -72,7 +72,9 @@
     "DeleteCommentConfirm": "Do you want to delete this comment?",
     "ConfirmTitle": "Please confirm",
     "CommentCreateSuccess": "Comment successfully created.",
+    "CommentUpdateSuccess": "Comment successfully updated.",
     "CommentCreateFail": "Failed to create comment.",
+    "CommentUpdateFail": "Failed to update comment.",
     "CommentDeleteSuccess": "Comment successfully deleted.",
     "CommentDeleteFail": "Failed to delete this comment.",
     "OverlappingComment": "Your comment overlaps with another comment. Please select other part of text.",
