Comments - delete root comment

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -71,6 +71,7 @@
     "EmptyComment": "Komentář je prázdný. Prosím, vložte text komentáře",
     "DeleteCommentConfirm": "Opravdu chcete smazat tento komentář?",
     "ConfirmTitle": "Potvrzení",
+    "CannotDeleteComment": "Nelze smazat komentář první úrovně, pokud je zapnutý editační mód.",
     "CommentCreateSuccess": "Komentář úspěšně vytvořen.",
     "CommentUpdateSuccess": "Komentář úspěšně upravit.",
     "CommentCreateFail": "Komentář se nepodařilo vytvořit.",
