--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -71,6 +71,7 @@
     "EmptyComment": "Comment is empty. Please fill it",
     "DeleteCommentConfirm": "Do you want to delete this comment?",
     "ConfirmTitle": "Please confirm",
+    "CannotDeleteComment": "Cannot delete the first level comment, if editing mode is enabled.",
     "CommentCreateSuccess": "Comment successfully created.",
     "CommentUpdateSuccess": "Comment successfully updated.",
     "CommentCreateFail": "Failed to create comment.",
