--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -64,6 +64,7 @@
     "SaveWithErrors": "Uložit s chybami",
     "AddComment": "Přidat komentář",
     "CreateCommentWarning": "Upozornění, přidání nového komentáře provede uložení stránky.",
+    "DeleteCommentWarning": "Upozornění, smazání tohoto komentáře provede uložení stránky.",
     "ExpandCommentArea": "Zvětšit sekci komentářů",
     "CollapseCommentArea": "Zmenšit sekci komentářů",
     "LoadCommentsFailed": "Při načítání komentářů stránky {0} nastala neočekávaná chyba.",
@@ -73,7 +74,7 @@
     "ConfirmTitle": "Potvrzení",
     "CannotDeleteComment": "Nelze smazat komentář první úrovně, pokud je zapnutý editační mód.",
     "CommentCreateSuccess": "Komentář úspěšně vytvořen.",
-    "CommentUpdateSuccess": "Komentář úspěšně upravit.",
+    "CommentUpdateSuccess": "Komentář úspěšně upraven.",
     "CommentCreateFail": "Komentář se nepodařilo vytvořit.",
     "CommentUpdateFail": "Komentář se nepodařilo upravit.",
     "CommentDeleteSuccess": "Komentář úspěšně smazán.",
