--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -64,6 +64,7 @@
     "SaveWithErrors": "Save with errors",
     "AddComment": "Add comment",
     "CreateCommentWarning": "Warning, adding new comment will save the page.",
+    "DeleteCommentWarning": "Warning, deleting this comment will save the page.",
     "ExpandCommentArea": "Expand comment area",
     "CollapseCommentArea": "Collapse comment area",
     "LoadCommentsFailed": "Failed to construct comment area for page {0}",
